Fixed pledge/rewards layout. Changed alignment in various div tags

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.text-box {
+	width: 40em;
+	height: 5em;
+}
+
+#comments-section {
+	padding: 1em;
+}
