--- a/app/assets/stylesheets/pledges.scss
+++ b/app/assets/stylesheets/pledges.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the pledges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.pledge-page {
+	padding-bottom: 2em;
+}
