--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -46,13 +46,13 @@ ul {
 }
 
 //  PROJECTS SHOW
-.pledges-section {
-	width: 49.5%;
-	float: left;
-  padding: 2em;
-  border: 2px solid black;
-  margin-left: 0.3em;
-}
+// .pledges-section {
+// 	width: 49.5%;
+// 	float: left;
+//   padding: 2em;
+//   border: 2px solid black;
+//   margin-left: 0.3em;
+// }
 
 .rewards-section {
 	width: 20%;
@@ -69,20 +69,20 @@ ul {
 	display: block;
 	text-wrap: supress;
 }
-#rightside{
+// #rightside{
 
-  width: 49.5%;
-  float: right;
-  font-size: 1em;
-  font-weight:200;
-  max-height: 25%;
-  margin-right: 0.3em;
-  padding:1em;
-  border: 2px solid black;
-  ul{
-    padding:0em;
-  }
-}
+//   width: 49.5%;
+//   float: right;
+//   font-size: 1em;
+//   font-weight:200;
+//   max-height: 25%;
+//   margin-right: 0.3em;
+//   padding:1em;
+//   border: 2px solid black;
+//   ul{
+//     padding:0em;
+//   }
+// }
 #comment-section {
   width: 100%;
 }
@@ -90,3 +90,30 @@ ul {
 .blank-space {
   height: 320px;
 }
+
+#rightside {
+  width: 49%;
+  border: 1px solid #3498db;
+  padding: 1em;
+  margin: 0.2em;
+  min-height: 25em;
+  max-height: 25em;
+  ul{
+    padding:0em;
+  }
+}
+
+.pledges-section {
+  width: 49%;
+  border: 1px solid #3498db;
+  padding: 1em;
+  margin: 0.2em;
+  min-height: 25em;
+  max-height: 25em;
+}
+
+#pledge-bar {
+  padding: 1em;
+}
+
+
